--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
   <div class="container-fluid p-0">
     <div class="row vh-100 g-0">
       <div class="col-md-6 p-0 position-relative">
-        <img id="profile-img" src="/images/58510.jpg" alt="Panupong" class="profile-img w-100 h-100 object-fit-cover">
+        <img id="profile-img" src="./images/58510.jpg" alt="Panupong" class="profile-img w-100 h-100 object-fit-cover">
         <div class="overlay position-absolute top-0 start-0 w-100 h-100"></div>
       </div>
       <div class="col-md-6 bg-dark-slate text-white d-flex flex-column">
@@ -195,7 +195,7 @@
                     <div class="timeline-item">
                       <div class="timeline-content">
                         <div class="education-header">
-                          <img src="/images/Chiang_mai_university_logo.png" alt="Chiang Mai University" class="education-logo">
+                          <img src="./images/Chiang_mai_university_logo.png" alt="Chiang Mai University" class="education-logo">
                           <div>
                             <h4>Chiang Mai University</h4>
                             <p class="timeline-date">2021 - Present</p>
@@ -211,7 +211,7 @@
                     <div class="timeline-item">
                       <div class="timeline-content">
                         <div class="education-header">
-                          <img src="/images/dara.png" alt="Dara Academy" class="education-logo">
+                          <img src="./images/dara.png" alt="Dara Academy" class="education-logo">
                           <div>
                             <h4>Dara Academy</h4>
                             <p class="timeline-date">2019 - 2021</p>
@@ -223,7 +223,7 @@
                     <div class="timeline-item">
                       <div class="timeline-content">
                         <div class="education-header">
-                          <img src="/images/dara.png" alt="Dara Academy" class="education-logo">
+                          <img src="./images/dara.png" alt="Dara Academy" class="education-logo">
                           <div>
                             <h4>Dara Academy</h4>
                             <p class="timeline-date">2016 - 2018</p>
@@ -281,7 +281,7 @@
                     <div class="card-body">
                       <div class="video-container mb-3">
                         <video controls class="w-100">
-                          <source src="/videos/scatman-gameplay.mp4" type="video/mp4">
+                          <source src="./videos/scatman-gameplay.mp4" type="video/mp4">
                           Your browser does not support the video tag.
                         </video>
                       </div>
@@ -304,7 +304,7 @@
                     <div class="card-body">
                       <div class="video-container mb-3">
                           <video controls class="w-100">
-                            <source src="/videos/farmhug.mp4" type="video/mp4">
+                            <source src="./videos/farmhug.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                           </video>
                       </div>
@@ -330,7 +330,7 @@
       <div class="card-body">
         <div class="video-container mb-3">
           <video controls class="w-100">
-            <source src="/videos/portfolio-demo.mp4" type="video/mp4">
+            <source src="./videos/portfolio-demo.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -356,7 +356,7 @@
       <div class="card-body">
         <div class="video-container mb-3">
           <video controls class="w-100">
-            <source src="/videos/web-shop.mp4" type="video/mp4">
+            <source src="./videos/web-shop.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -384,7 +384,7 @@
       <div class="card-body">
         <div class="video-container mb-3">
           <video controls class="w-100">
-            <source src="/videos/museum.mp4" type="video/mp4">
+            <source src="./videos/museum.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -408,7 +408,7 @@
       <div class="card-body">
         <div class="video-container mb-3">
           <video controls class="w-100">
-            <source src="/videos/calculator.mp4" type="video/mp4">
+            <source src="./videos/calculator.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -434,7 +434,7 @@
       <div class="card-body">
         <div class="video-container mb-3">
           <video controls class="w-100">
-            <source src="/videos/match-game.mp4" type="video/mp4">
+            <source src="./videos/match-game.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -461,7 +461,7 @@
     <div class="card-body">
       <div class="video-container mb-3">
         <video controls class="w-100">
-          <source src="/videos/unreal-miniproject.mp4" type="video/mp4">
+          <source src="./videos/unreal-miniproject.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
@@ -539,6 +539,6 @@
       </div>
     </div>
   </div>
-  <script src="/js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
